[package]
name = "git"
version = "0.1.0"
authors = ["Intent HQ <engineering@intenthq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
git2 = "0.14.4"

# When building for musl (ie. a static binary), we opt into the "vendored"
# feature flag of openssl-sys which compiles libopenssl statically for us.
[target.'cfg(target_env="musl")'.dependencies.openssl-sys]
features = ["vendored"]
version = "0.9.58"

[dev-dependencies]
tempfile = "3.1.0"
