[package]
name = "handlers"
version = "0.1.0"
authors = ["Intent HQ <engineering@intenthq.com>"]
edition = "2018"

[dependencies]
git = { path = "../git" }
actix-web = "^0.7.18"
git2 = "^0.8.0"
serde = "^1.0.89"
serde_derive = "^1.0.89"

# When building for musl (ie. a static binary), we opt into the "vendored"
# feature flag of openssl-sys which compiles libopenssl statically for us.
[target.'cfg(target_env="musl")'.dependencies.openssl-sys]
features = ["vendored"]
version = "*"
