[package]
name = "gitkv"
version = "0.1.0"
description = "gitkv is a server for using git as a key value store for text files"
authors = ["Intent HQ <engineering@intenthq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
git = { path = "../git" }
handlers = { path = "../handlers" }
actix = "^0.8.3"
actix-web = "^1.0.2"
clap = "^2.32.0"
futures = "^0.1.26"
serde = "^1.0.89"
serde_derive = "^1.0.89"
log = "^0.4.6"
env_logger = "^0.6.1"
job_scheduler = "1.0.6"

[dev-dependencies]
actix-http = "^0.2.3"
actix-http-test = "^0.2.2"

# When building for musl (ie. a static binary), we opt into the "vendored"
# feature flag of openssl-sys which compiles libopenssl statically for us.
[target.'cfg(target_env="musl")'.dependencies.openssl-sys]
features = ["vendored"]
version = "*"
