[package]
name = "gitkv"
version = "0.1.0"
description = "gitkv is a server for using git as a key value store for text files"
authors = ["Intent HQ <engineering@intenthq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
git = { path = "../git" }
handlers = { path = "../handlers" }
actix = "^0.9.0"
actix-web = "^1.0.9"
clap = "^2.33.0"
futures = "^0.1.26"
serde = "^1.0.102"
serde_derive = "^1.0.102"
serde_json = "^1.0.41"
log = "^0.4.8"
env_logger = "^0.7.1"

[dev-dependencies]
actix-http = "^0.2.11"
actix-http-test = "^0.2.5"

# When building for musl (ie. a static binary), we opt into the "vendored"
# feature flag of openssl-sys which compiles libopenssl statically for us.
[target.'cfg(target_env="musl")'.dependencies.openssl-sys]
features = ["vendored"]
version = "*"
