[package]
name = "gitkv"
version = "0.1.0"
description = "gitkv is a server for using git as a key value store for text files"
authors = ["Intent HQ <engineering@intenthq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
git = { path = "../git" }
handlers = { path = "../handlers" }
actix = "0.10.0" # Actor communication between handlers and Git
actix-rt = "1.1.1" # Actix macros
actix-web = "3.0.2" # Web framework
clap = "2.33.1" # CLI argument parsing
env_logger = "0.7.1" # Configure logging level with env variables
log = "0.4.11" # Logging facade
serde = "1.0.114" # Serialisation of results
serde_derive = "1.0.114" # Macros for deriving Serde converstions
serde_json = "1.0.57" # JSON support for Serde

[dev-dependencies]
assert_cmd = "1.0.1" # Run our binaries from the integration tests
predicates = "2.0.0" # Assert on binaries being run in the integration tests

# When building for musl (ie. a static binary), we opt into the "vendored"
# feature flag of openssl-sys which compiles libopenssl statically for us.
[target.'cfg(target_env="musl")'.dependencies.openssl-sys]
features = ["vendored"]
version = "0.9.58"
